# harbor-log

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: build-helper-assets.sh  ci-local.sh  e2e-docker.sh  lib.sh  package-smoke.sh  stage_helper_assets.py  test-python.sh  test-rust.sh
src/harbor_stream/: __init__.py  cli.py  config.py  events.py  harbor_compat.py  helper.py  proxying.py  reconciliation.py  runner.py  sink.py
src/harbor_stream/agents/: __init__.py  installed_proxy.py  terminus2_proxy.py
src/harbor_stream/assets/: README.md
tests/: __init__.py  integration_agents.py  test_agent_proxies.py  test_config.py  test_e2e.py  test_events.py  test_proxying.py  test_reconciliation.py
watcher-rs/: Cargo.toml
watcher-rs/src/: config.rs  main.rs  patching.rs  raw.rs  status.rs  tail.rs  transport.rs
watcher-rs/src/adapters/: claude.rs  codex.rs  mod.rs  terminus2.rs
